--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
             <h3 class="feature-title">Delicateness.</h3>
             <p>Our Products Are Delicately Made To Fulfill Your Expectations.</p>
         </div>
-        <div class="col-lg-4 feature-box" data-aos="fade-down" data-aos-duration="1500">
+        <div class="col-lg-4 feature-box" data-aos="fade-right" data-aos-duration="1500">
             <i class="fas fa-heart fa-4x feature-icon"></i>
             <h3 class="feature-title">Love.</h3>
             <p>We Pour Our Hearts Into Making High Quality Products.</p>
         </div>
-        <div class="col-lg-4 feature-box" data-aos="fade-left" data-aos-duration="1500">
+        <div class="col-lg-4 feature-box" data-aos="fade-right" data-aos-duration="1500">
             <i class="fas fa-check-circle fa-4x feature-icon"></i>
             <h3 class="feature-title">Guaranteed.</h3>
             <p>Our Products Are Guaranteed To Fulfill your Needs.</p>
@@ -113,7 +113,7 @@
     <!-- Call to Action -->
 
     <section id="CTA">
-        <div class="container-fluid" data-aos="fade-up" data-aos-duration="1500">
+        <div class="container-fluid" data-aos="fade-up" data-aos-duration="2000">
             <div class="row cta-content">
                 <div class="col-lg-9 CTA-Heading">
             <h1>Head To Our Facebook Page To Find The Product Of Your Needs Right Now!</h1>
